Changelog
=========

0.1.3 - 
------------------

- Show discreet info on running model.
  [ggozad]

0.1.2 - 2023-10-17
------------------

- Ability to rename chats.
  [ggozad]

0.1.0 - 2023-10-15
------------------

- Initial release.
  [ggozad]