@@ -32,7 +32,6 @@ python = "^3.10"
 textual = "^0.40.0"
 typer = "^0.9.0"
 python-dotenv = "^1.0.0"
-pydantic = "^2.4.2"
 httpx = "^0.25.0"
 aiosql = "^9.0"
 aiosqlite = "^0.19.0"
