@@ -4,6 +4,9 @@ Changelog
 0.1.3 - 
 ------------------
 
+- Remove pydantic and as a result, the rust dependency & build in homebrew.
+  [ggozad]
+
 - Show discreet info on running model.
   [ggozad]
 
